Add support for I2C on userland add folder to automount mmcblk0p1

--- a/ebaz4205/dts/ebaz4205-board.dtsi
+++ b/ebaz4205/dts/ebaz4205-board.dtsi
@@ -8,6 +8,7 @@
                 ethernet0 = &gem0;
                 serial0 = &uart1;
                 mmc0 = &sdhci0;
+                i2c0 = &i2c0;
         };
 
         memory@0 {
@@ -107,4 +108,11 @@
                         };
                 };
         };
+};
+
+&i2c0 {
+	status = "okay";
+	clock-frequency = <400000>;
+	scl-gpios = <&gpio0 26 0>;
+	sda-gpios = <&gpio0 27 0>;
 };
